<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".ui.fragments.PasswordRecoveryStep3Fragment">

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@color/primaryColor"
        android:foregroundTint="@color/secondaryTextColor"
        android:padding="@dimen/_15sdp"
        android:rotation="145"
        android:src="@drawable/ic_key"
        android:visibility="visible"
        app:riv_border_color="@color/secondaryTextColor"
        app:riv_corner_radius="100dp"
        app:riv_mutate_background="true"
        app:riv_tile_mode="clamp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/password_recovery"
        android:textAllCaps="true"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="@+id/tv2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/tv2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_the_password_to_retrieve_it_now"
        android:textAllCaps="true"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/tv2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/tv2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:gravity="center_horizontal|center_vertical">

       <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/inputs_differ_background_left"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_key"
                app:tint="@color/iconsColor" />

        <EditText
            android:id="@+id/etNewPass_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="12"
            android:background="@drawable/inputs_normal_background_right"
            android:hint="@string/enter_new_password"
            android:inputType="phone"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="#BFFFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/inputs_differ_background_left"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_key"
                app:tint="@color/iconsColor" />

        <EditText
            android:id="@+id/etNewPass_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="12"
            android:background="@drawable/inputs_normal_background_right"
            android:hint="@string/re_enter_new_password"
            android:inputType="phone"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="#BFFFFFFF" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:paddingStart="@dimen/_32sdp"
        android:paddingEnd="@dimen/_32sdp"
        android:text="@string/confirm_password"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/_12sdp"
        android:visibility="visible"
        app:backgroundTint="@color/primaryColor"
        app:cornerRadius="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/textField"
        app:layout_constraintStart_toStartOf="@+id/textField"
        app:layout_constraintTop_toBottomOf="@+id/textField"
        app:rippleColor="@color/primaryLightColor" />

</LinearLayout>