<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/background_color"
    tools:context=".ui.fragments.ChooseLanguageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_64sdp"
            android:layout_marginBottom="@dimen/_32sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@+id/tv"
            app:layout_constraintEnd_toEndOf="@+id/tv"
            app:layout_constraintStart_toStartOf="@+id/tv"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            android:textAllCaps="true"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/tv2"
            app:layout_constraintEnd_toEndOf="@+id/tv2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/create_an_account_to_future"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/textField"
            app:layout_constraintEnd_toEndOf="@+id/textField"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textField" />

        <LinearLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_32sdp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginBottom="16dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnArabic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:paddingStart="@dimen/_32sdp"
                android:paddingEnd="@dimen/_32sdp"
                android:text="@string/arabic"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/secondaryTextColor"
                app:backgroundTint="@color/primaryColor"
                app:cornerRadius="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="@+id/textField"
                app:layout_constraintStart_toStartOf="@+id/textField"
                app:layout_constraintTop_toBottomOf="@+id/textField"
                app:rippleColor="@color/primaryLightColor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEnglish"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:paddingStart="@dimen/_32sdp"
                android:paddingEnd="@dimen/_32sdp"
                android:text="@string/english"
                android:textColor="@color/secondaryTextColor"
                app:backgroundTint="@color/primaryColor"
                app:cornerRadius="@dimen/_20sdp"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@+id/textField"
                app:layout_constraintStart_toStartOf="@+id/textField"
                app:layout_constraintTop_toBottomOf="@+id/textField"
                app:rippleColor="@color/primaryLightColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_32sdp"
            app:layout_constraintEnd_toEndOf="@+id/textField"
            app:layout_constraintStart_toStartOf="@+id/textField"
            app:layout_constraintTop_toBottomOf="@+id/textField">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/inputs_differ_background_left"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_location"
                app:tint="@color/iconsColor" />

            <!-- TODO : change background to dark to match the theme -->
            <Spinner
                android:id="@+id/spCountry"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="12"
                android:autofillHints="@string/country"
                android:background="@drawable/inputs_normal_background_right"
                android:contextClickable="true"
                android:textColor="@color/secondaryTextColor" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>